fixed alignment of the left section

--- a/blocks/opco-banner/opco-banner.css
+++ b/blocks/opco-banner/opco-banner.css
@@ -101,6 +101,10 @@
   flex-direction: column
 }
 
+.opco-banner-wrapper :is(.items-start) {
+  align-items: flex-start
+}
+
 .opco-banner-wrapper :is(.items-center) {
   align-items: center
 }
